RESOLVED FIXED84111
-webkit-mask-box-image does not draw when layer tree flattening is enabled
https://bugs.webkit.org/show_bug.cgi?id=84111
Summary -webkit-mask-box-image does not draw when layer tree flattening is enabled
Andy Estes
Reported 2012-04-16 18:22:23 PDT
-webkit-mask-box-image does not draw when layer tree flattening is enabled
Attachments
Patch (3.20 KB, patch)
2012-04-16 18:25 PDT, Andy Estes
simon.fraser: review+
Andy Estes
Comment 1 2012-04-16 18:25:27 PDT
Andy Estes
Comment 2 2012-04-16 18:25:52 PDT
Simon Fraser (smfr)
Comment 3 2012-04-17 14:28:03 PDT
Comment on attachment 137451 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=137451&action=review > Source/WebCore/rendering/InlineFlowBox.cpp:1292 > + bool flattenCompositingLayers = !renderer()->view()->frameView() || renderer()->view()->frameView()->paintBehavior() & PaintBehaviorFlattenCompositingLayers; I think it would be cleaner to pass this down via PaintInfo, but that would be a larger change.
Andy Estes
Comment 4 2012-04-17 14:32:51 PDT
Note You need to log in before you can comment on or make changes to this bug.