-webkit-mask-box-image does not draw when layer tree flattening is enabled https://bugs.webkit.org/show_bug.cgi?id=84111

Reviewed by Simon Fraser.

No new tests since taking pixel test results with
PaintBehaviorFlattenCompositingLayers set is not currently supported.
<https://bugs.webkit.org/show_bug.cgi?id=84110> tracks fixing this.

When painting mask images, we should take the non-composited path if
layers are being flattened.

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::paintMask):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintMaskImages):

Canonical link: https://commits.webkit.org/101696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114433 268f45cc-cd09-0410-ab3c-d52691b4dbfc